# game-of-life

./: README.md  application.py  game-of-life.html  game-of-life.pyxapp  pyproject.toml
game_of_life/: background.py  fixtures.py  game_engine.py  ui.py
tests/: test_game_of_life.py
