[tool.poetry]
name = "game-of-life"
version = "0.1.0"
description = ""
authors = ["João Gomes <j.gomes@runtime-revolution.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pyxel = "^1.9.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.23.2"
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
